# rustc-147-macro-regression

./: Cargo.toml  README.md
src/: lib.rs
